--- a/style.css
+++ b/style.css
@@ -14,27 +14,38 @@ header {
     color: white;
     z-index: 100;
     position: fixed;
-    height: 8vw;
+    height: 6vw;
     width: 100vw;
     top: 0;
     left: 0;
     background-color: rgba(5, 21, 50, 0.5);
     font-family: 'Quicksand', sans-serif;
-    font-size: 3vw;
+    font-size: 2vw;
 }
 header img {
 
     border-radius: 100vw;
-    height: 6vw;
+    height: 4vw;
     margin: 1vw;
     margin-right: 30vw;
 }
 header p {
     margin: 2vw;
-    max-width: 5vw;
+    max-width: 1vw;
     text-align: right;
     margin-right: 0px;
     margin-left: 0px;
+    transform: scale(1);
+    transition: transform 1s;
+}
+header p:hover {
+    margin: 2vw;
+    max-width: 1vw;
+    text-align: right;
+    margin-right: 0px;
+    margin-left: 0px;
+    cursor: pointer;
+    transform: scale(1.5);
 }
 
 /* #endregion header */
