--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body{
     margin: 0%;
     background-color: rgb(0, 0, 0);
     font-size: 20px;
+    display: grid;
+    grid: 1fr auto / auto ;
 }
 
 /* #region header */
@@ -31,21 +33,18 @@ header img {
 }
 header p {
     margin: 2vw;
-    max-width: 1vw;
     text-align: right;
     margin-right: 0px;
     margin-left: 0px;
     transform: scale(1);
-    transition: transform 1s;
+    transition: transform 0.1s;
 }
 header p:hover {
-    margin: 2vw;
-    max-width: 1vw;
-    text-align: right;
-    margin-right: 0px;
-    margin-left: 0px;
     cursor: pointer;
-    transform: scale(1.5);
+    transform: scale(1.1);
+}
+.sources {
+    margin-right: 5vw;
 }
 
 /* #endregion header */
@@ -78,10 +77,11 @@ header p:hover {
     float: left;
 }
 .body_L1_fond h1{
-    background:linear-gradient(to right, #ffd8f7, #797979) ;
+    background:linear-gradient(to right, #ffd8f7, #6a6a6a) ;
     -webkit-background-clip: text;
+    background-clip: none;
     color: transparent;
-    margin-top: 30%;
+    margin-top: 10%;
     font-size: 400%;
     text-align: center;
 }
@@ -93,11 +93,13 @@ header p:hover {
 .body_L1_left img {
     float: right;
 }
-
-body {
-    display: grid;
-    grid: 1fr auto / auto ;
+.body_L1_box {
+    margin-top: 20%;
+    background-color: black;
+    max-width: 100%;
+    height: 200%;
 }
+
 /* #endregion body_L1 */
 
 
@@ -114,7 +116,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
-    height: 3px;
+    height: 2160px;
     margin: auto;
 }
 
