--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ header p:hover {
     float: right;
 }
 .blue_fade {
-
+    background: linear-gradient(to bottom,);
 }
 .body_L1_box {
     margin-top: -20%;
@@ -102,6 +102,7 @@ header p:hover {
     max-width: 100%;
     height: 200%;
     border-radius: 70px;
+    z-index: 2;
 }
 
 /* #endregion body_L1 */
