--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ header p:hover {
     float: left;
 }
 .body_L1_fond h1{
-    background:linear-gradient(to right, #ffd8f7, #6a6a6a) ;
+    background:linear-gradient(to top, #ffd8f7, #6a6a6a) ;
     -webkit-background-clip: text;
     background-clip: none;
     color: transparent;
@@ -94,10 +94,11 @@ header p:hover {
     float: right;
 }
 .blue_fade {
-    background: linear-gradient(to bottom,);
+    background: linear-gradient(to bottom,rgb(255,255,255),transparent);
+    height: 30px;
 }
 .body_L1_box {
-    margin-top: -20%;
+    margin-top: 20%;
     background-color: rgb(0, 0, 0);
     max-width: 100%;
     height: 200%;
