--- a/style.css
+++ b/style.css
@@ -94,11 +94,11 @@ header p:hover {
     float: right;
 }
 .blue_fade {
-    background: linear-gradient(to bottom,rgb(255,255,255),transparent);
-    height: 30px;
+    background: linear-gradient(to top,rgb(255,255,255),transparent);
+    height: 20%;
 }
 .body_L1_box {
-    margin-top: 20%;
+    margin-top: -20%;
     background-color: rgb(0, 0, 0);
     max-width: 100%;
     height: 200%;
