--- a/style.css
+++ b/style.css
@@ -1,160 +1,71 @@
-/* dire comment et pourquoi on a fait ca */
-
-body{
-    margin: 0%;
-    background-color: rgb(0, 0, 0);
-    font-size: 20px;
-    display: grid;
-    grid: 1fr auto / auto ;
+* {
+    box-sizing: border-box;
 }
 
-/* #region header */
+body {
+    margin: 0;
+}
 
-header {
-    display: grid;
-    grid-auto-flow: column;
-    color: white;
-    z-index: 100;
-    position: fixed;
-    height: 6vw;
-    width: 100vw;
+body {
+    font-family: "DM Sans", sans-serif;
+}
+
+h1,
+h2 {
+    font-family: "DM Sans", sans-serif;
+}
+
+.circle {
+    position: absolute;
+    border-radius: 50%;
+    opacity: 0.7;
+    filter: blur(50px);
+}
+
+.circle-orange {
+    background-color: #ff6600;
+    width: 300px;
+    height: 300px;
+    top: 120px;
+    right: 0px;
+    filter: blur(70px);
+    opacity: 0.4;
+}
+
+.circle-pink {
+    width: 300px;
+    height: 300px;
+    top: 120px;
+    left: 0px;
+    filter: blur(70px);
+    opacity: 0.4;
+}
+
+.circle-bright-pink {
+    width: 300px;
+    height: 300px;
+    top: 20px;
+    left: 0px;
+}
+
+.circle-bright-orange {
+    background-color: #ff4500;
+    width: 350px;
+    height: 350px;
+    top: 50px;
+    left: 20px;
+}
+
+.circle-deep-orange {
+    background-color: #ff6600;
+    width: 400px;
+    height: 400px;
     top: 0;
     left: 0;
-    background-color: rgba(5, 21, 50, 0.5);
-    font-family: 'Quicksand', sans-serif;
-    font-size: 2vw;
-}
-header img {
-
-    border-radius: 100vw;
-    height: 4vw;
-    margin: 1vw;
-    margin-right: 30vw;
-}
-header p {
-    margin: 2vw;
-    text-align: right;
-    margin-right: 0px;
-    margin-left: 0px;
-    transform: scale(1);
-    transition: transform 0.1s;
-}
-header p:hover {
-    cursor: pointer;
-    transform: scale(1.1);
-}
-.sources {
-    margin-right: 5vw;
 }
 
-/* #endregion header */
-
-/* #region body_L1 */
-
-.body_L1 {
-    display: grid;
-    font-family: 'Asap', sans-serif;
-    grid: 1fr auto / auto 1fr auto;
-    font-family: 'Quicksand', sans-serif;
-}
-.body_L1 > * {
-    margin: 0%;
-}
-.body_L1_left{
-    grid-row: 1;
-    grid-column: 1;
-    display: none;
-
-}
-.body_L1_fond {
-    grid-row: 1;
-    grid-column: 2;
-    background-image: url(IMG/BG_P1.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    max-width: 100%;
-    height: 1080px;
-    float: left;
-}
-.body_L1_fond h1{
-    background:linear-gradient(to top, #ffd8f7, #6a6a6a) ;
-    -webkit-background-clip: text;
-    background-clip: none;
-    color: transparent;
-    margin-top: 10%;
-    font-size: 400%;
-    text-align: center;
-}
-.body_L1_right{
-    grid-row: 1;
-    grid-column: 3;
-    display: none;
-}
-.body_L1_left img {
-    float: right;
-}
-.blue_fade {
-    margin-top: 5%;
-    background: linear-gradient(to top,rgb(255,255,255),transparent);
-    height: 30%;
-}
-.body_L1_box {
-    margin-top: -11%;
-    background-color: rgb(0, 0, 0);
-    max-width: 100%;
-    height: 200%;
-    border-radius: 70px;
-    z-index: 2;
-}
-
-/* #endregion body_L1 */
-
-
-/* #region mid_body */
-
-.mid_body {
- display: grid;
- grid: 1fr auto / auto 1fr auto;
-}
-.mid_body_centre {
-    grid-row: 1;
-    grid-column: 2;
-    background-image: url(IMG/BG_body.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 2160px;
-    margin: auto;
-}
-
-.mid_body_centre > * {
-    margin: 0%;
-}
-.mid_body_left{
-    grid-row: 1;
-    grid-column: 1;
-    display: none;
-
-}
-.mid_body_right{
-    grid-row: 1;
-    grid-column: 3;
-    display: none;
-}
-.mid_body_left img {
-    float: right;
-}
-
-/* #endregion midd_body */
-
-@media screen and (min-width: 1921px) {
-    .body_L1_left, .body_L1_right, .mid_body_left ,.mid_body_right {
-        display: block;
-    }
-    .body_L1 {
-        grid: auto / auto 1920px auto;
-    }
-    .mid_body {
-        grid: auto / auto 1920px auto;
-    }
+.mesh_gradient {
+    background-image:
+        radial-gradient(at 0% 100%, hsla(32, 100%, 67%, 1) 0px, transparent 35%),
+        radial-gradient(at 80% 100%, hsla(20, 100%, 70%, 1) 0px, transparent 35%);
 }
