--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,10 +10,6 @@ body {
     font-family: "DM Sans", sans-serif;
 }
 
-h1,
-h2 {
-    font-family: "DM Sans", sans-serif;
-}
 
 .circle {
     position: absolute;
@@ -23,7 +19,7 @@ h2 {
 }
 
 .circle-orange {
-    background-color: #ff6600;
+    background-color: #FF4900;
     width: 300px;
     height: 300px;
     top: 120px;
