--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,7 +7,14 @@ body {
 }
 
 body {
-    font-family: "DM Sans", sans-serif;
+    @font-face {
+        font-family: 'Inter';
+        src: url('../fonts/inter/Inter-VariableFont_opsz,wght.ttf') format('truetype');
+        font-weight: normal;
+        font-style: normal;
+    }
+
+    font-family: 'Inter', sans-serif;
 }
 
 
@@ -29,6 +36,7 @@ body {
 }
 
 .circle-pink {
+    background-color: #7634a0;
     width: 300px;
     height: 300px;
     top: 120px;
@@ -38,6 +46,7 @@ body {
 }
 
 .circle-bright-pink {
+    background-color: #FFB822;
     width: 300px;
     height: 300px;
     top: 20px;
