bon départ mais bcp de improvement possible

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -23,6 +23,7 @@ stone-800
 
 * {
     box-sizing: border-box;
+    @apply transition-discrete duration-300;
 }
 
 body {
@@ -36,7 +37,6 @@ body {
         font-weight: normal;
         font-style: normal;
     }
-
     font-family: 'Inter', sans-serif;
 }
 
@@ -44,56 +44,8 @@ body {
 .circle {
     position: absolute;
     border-radius: 50%;
-    opacity: 0.7;
-    filter: blur(50px);
-}
-
-.circle-orange {
-    background-color: #FF4900;
-    width: 300px;
-    height: 300px;
-    top: 120px;
-    right: 0px;
     filter: blur(70px);
-    opacity: 0.4;
-}
-
-.circle-pink {
-    background-color: #7634a0;
+    z-index: -1;
     width: 300px;
     height: 300px;
-    top: 120px;
-    left: 0px;
-    filter: blur(70px);
-    opacity: 0.4;
-}
-
-.circle-bright-pink {
-    background-color: #FFB822;
-    width: 300px;
-    height: 300px;
-    top: 20px;
-    left: 0px;
-}
-
-.circle-bright-orange {
-    background-color: #ff4500;
-    width: 350px;
-    height: 350px;
-    top: 50px;
-    left: 20px;
-}
-
-.circle-deep-orange {
-    background-color: #ff6600;
-    width: 400px;
-    height: 400px;
-    top: 0;
-    left: 0;
-}
-
-.mesh_gradient {
-    background-image:
-        radial-gradient(at 0% 100%, hsla(32, 100%, 67%, 1) 0px, transparent 35%),
-        radial-gradient(at 80% 100%, hsla(20, 100%, 70%, 1) 0px, transparent 35%);
 }
