--- a/assets/css/outpouts.css
+++ b/assets/css/outpouts.css
@@ -12,6 +12,8 @@
     --color-orange-600: #FF4900;
     --color-yellow-400: #FFB822;
     --color-yellow-600: oklch(0.681 0.162 75.834);
+    --color-green-100: oklch(0.962 0.044 156.743);
+    --color-green-500: oklch(0.723 0.219 149.579);
     --color-pink-400: oklch(0.718 0.202 349.761);
     --color-pink-500: oklch(0.656 0.241 354.308);
     --color-slate-100: oklch(0.968 0.007 247.896);
@@ -293,8 +295,74 @@
   .top-160 {
     top: calc(var(--spacing) * 160);
   }
+  .top-250 {
+    top: calc(var(--spacing) * 250);
+  }
+  .top-300 {
+    top: calc(var(--spacing) * 300);
+  }
+  .top-340 {
+    top: calc(var(--spacing) * 340);
+  }
+  .top-350 {
+    top: calc(var(--spacing) * 350);
+  }
+  .top-400 {
+    top: calc(var(--spacing) * 400);
+  }
+  .top-450 {
+    top: calc(var(--spacing) * 450);
+  }
+  .top-470 {
+    top: calc(var(--spacing) * 470);
+  }
+  .top-480 {
+    top: calc(var(--spacing) * 480);
+  }
+  .top-490 {
+    top: calc(var(--spacing) * 490);
+  }
+  .top-510 {
+    top: calc(var(--spacing) * 510);
+  }
+  .top-610 {
+    top: calc(var(--spacing) * 610);
+  }
+  .top-640 {
+    top: calc(var(--spacing) * 640);
+  }
+  .top-780 {
+    top: calc(var(--spacing) * 780);
+  }
+  .top-5100 {
+    top: calc(var(--spacing) * 5100);
+  }
+  .top-7800 {
+    top: calc(var(--spacing) * 7800);
+  }
   .right-0 {
     right: calc(var(--spacing) * 0);
+  }
+  .right-50 {
+    right: calc(var(--spacing) * 50);
+  }
+  .right-80 {
+    right: calc(var(--spacing) * 80);
+  }
+  .right-90 {
+    right: calc(var(--spacing) * 90);
+  }
+  .right-100 {
+    right: calc(var(--spacing) * 100);
+  }
+  .right-120 {
+    right: calc(var(--spacing) * 120);
+  }
+  .right-150 {
+    right: calc(var(--spacing) * 150);
+  }
+  .right-160 {
+    right: calc(var(--spacing) * 160);
   }
   .left-10 {
     left: calc(var(--spacing) * 10);
@@ -461,9 +529,6 @@
   .mt-16 {
     margin-top: calc(var(--spacing) * 16);
   }
-  .mr-1 {
-    margin-right: calc(var(--spacing) * 1);
-  }
   .mr-2 {
     margin-right: calc(var(--spacing) * 2);
   }
@@ -472,12 +537,6 @@
   }
   .mr-6 {
     margin-right: calc(var(--spacing) * 6);
-  }
-  .mr-8 {
-    margin-right: calc(var(--spacing) * 8);
-  }
-  .mr-10 {
-    margin-right: calc(var(--spacing) * 10);
   }
   .mb-3 {
     margin-bottom: calc(var(--spacing) * 3);
@@ -502,12 +561,6 @@
   }
   .ml-8 {
     margin-left: calc(var(--spacing) * 8);
-  }
-  .ml-12 {
-    margin-left: calc(var(--spacing) * 12);
-  }
-  .ml-14 {
-    margin-left: calc(var(--spacing) * 14);
   }
   .box-border {
     box-sizing: border-box;
@@ -685,9 +738,6 @@
   }
   .w-20 {
     width: calc(var(--spacing) * 20);
-  }
-  .w-24 {
-    width: calc(var(--spacing) * 24);
   }
   .w-fit {
     width: fit-content;
@@ -1393,6 +1443,18 @@
   }
   .bg-gray-800 {
     background-color: var(--color-gray-800);
+  }
+  .bg-green-100 {
+    background-color: var(--color-green-100);
+  }
+  .bg-green-500 {
+    background-color: var(--color-green-500);
+  }
+  .bg-orange-400 {
+    background-color: var(--color-orange-400);
+  }
+  .bg-orange-400\/20 {
+    background-color: color-mix(in oklab, var(--color-orange-400) 20%, transparent);
   }
   .bg-orange-600 {
     background-color: var(--color-orange-600);
