--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -27,7 +27,7 @@ stone-800
 }
 
 * {
-    
+
     box-sizing: border-box;
     border-style: solid;
     @apply transition-discrete duration-300;
@@ -44,7 +44,9 @@ body {
         font-weight: normal;
         font-style: normal;
     }
-    font-family: 'Inter', sans-serif;
+
+    font-family: 'Inter',
+    sans-serif;
 }
 
 
@@ -56,7 +58,98 @@ body {
     width: 300px;
     height: 300px;
 }
+
 .border-dashed {
     --tw-border-style: dashed;
     border-style: dashed;
 }
+
+.skill-container {
+    perspective: 500px;
+}
+
+.skill-bubble {
+    position: absolute;
+    width: var(--size);
+    height: var(--size);
+    top: var(--y);
+    left: var(--x);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(63, 63, 63, 0.5); /* stone-700/50 background */
+    border-radius: 50%;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+    transform-style: preserve-3d;
+    animation: float 6s ease-in-out infinite;
+    animation-delay: var(--delay);
+    transition: all 0.3s;
+    padding: 0.5rem;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(5px);
+}
+
+.skill-bubble:hover {
+
+}
+
+.skill-bubble.clickable {
+    background: linear-gradient(135deg, rgba(255, 73, 0, 0.2), rgba(255, 184, 34, 0.2));
+    border: 1px solid rgba(255, 73, 0, 0.3);
+    
+}
+
+.skill-icon {
+    width: calc(var(--size) / 3);
+    height: calc(var(--size) / 3);
+    margin-bottom: 4px;
+    /* filter: drop-shadow(0 0 2px rgba(255, 255, 255, 0.5)); */
+}
+
+.skill-bubble span {
+    color: white;
+    font-weight: 500;
+    text-align: center;
+    font-size: calc(var(--size) / 7);
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.skill-bubble.clickable:hover {
+    background: linear-gradient(135deg, rgba(255, 73, 0, 0.7), rgba(255, 184, 34, 0.7)); /* orange-600 to yellow-400 */
+    transform: scale(1.1) translateZ(20px);
+    box-shadow: 0 0 40px rgba(255, 73, 0, 0.4);
+    z-index: 10;
+}
+
+@keyframes float {
+    0% {
+        transform: translateZ(0);
+    }
+
+    50% {
+        transform: translateZ(30px);
+    }
+
+    100% {
+        transform: translateZ(0);
+    }
+}
+.skill-bubble.clickable {
+    cursor: pointer;
+    /* box-shadow: 0 0 15px rgba(255, 255, 255, 0.3); */
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.skill-bubble.clickable:hover {
+    transform: scale(1.1);
+    /* box-shadow: 0 0 20px rgba(255, 255, 255, 0.5); */
+}
+
+/* .skill-bubble.clickable::after {
+    content: '🔗';
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    font-size: 12px;
+} */
