--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,15 +4,19 @@
 COULEURS UTILISEES
 #FF4900
 orange-600
+rgb(255, 73, 0)
 
 #FFB822
 yellow-400
+rgb(255, 184, 34)
 
 #3C3C3C
 stone-700
+rgb(60, 60, 60)
 
 #242424
 stone-800
+rgb(36, 36, 36)
 
 
 
@@ -115,7 +119,7 @@ body {
 }
 
 .skill-bubble.clickable:hover {
-    background: linear-gradient(135deg, rgba(255, 73, 0, 0.7), rgba(255, 184, 34, 0.7));
+    background: linear-gradient(135deg, rgba(255, 73, 0, 0.4), rgba(255, 184, 34, 0.4));
     /* orange-600 to yellow-400 */
     transform: scale(1.1) translateZ(20px);
     box-shadow: 0 0 40px rgba(255, 73, 0, 0.4);
@@ -147,9 +151,6 @@ body {
     /* box-shadow: 0 0 20px rgba(255, 255, 255, 0.5); */
 }
 
-.liquid-glass {
-    @apply rounded-full;
-}
 
 .floating-nav {
     position: fixed;
@@ -160,30 +161,32 @@ body {
     transform-origin: center;
     overflow: hidden;
 }
+.liquid-glass {
+    background-color: rgba(36, 36, 36, 0.1);
+}
+.liquid-glass::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: radial-gradient(circle 100px at var(--mouse-x, 50%) var(--mouse-y, 50%),
+            rgba(255, 184, 34, 0.15) 0%,
+            rgba(255, 184, 34, 0.08) 30%,
+            transparent 60%);
+    border-radius: inherit;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    pointer-events: none;
+    z-index: 0;
+}
 
-/* .floating-nav::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: radial-gradient(circle 100px at var(--mouse-x, 50%) var(--mouse-y, 50%), 
-                    rgba(255, 255, 255, 0.15) 0%, 
-                    rgba(255, 255, 255, 0.08) 30%, 
-                    transparent 60%);
-        border-radius: inherit;
-        opacity: 0;
-        transition: opacity 0.3s ease;
-        pointer-events: none;
-        z-index: 0;
-    } */
-
-.floating-nav:hover::before {
+.liquid-glass:hover::before {
     opacity: 1;
 }
 
-.floating-nav:hover {
+.liquid-glass:hover {
     box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.3);
 }
 
@@ -215,6 +218,9 @@ body {
     /* Utilisation de 9999px pour un effet de bord arrondi */
     cursor: pointer;
 }
+.liquid-btn::hover {
+    box-shadow: 0 2px 8px 0 rgba(0,0,0,0.18), 0 0 0 2px rgba(0,0,0,0.12);
+}
 
 
 
@@ -231,7 +237,7 @@ body {
     }
 
     .nav-content {
-        gap: 8px;
+        gap: 4px;
     }
 
     .glass-btn {
@@ -255,9 +261,7 @@ body {
 
     .nav-left {
         top: 15px;
+        padding: 8px 0;
     }
 
-    .nav-right {
-        top: 75px;
-    }
 }
